--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,6 @@
 
   <section class="mb-32">
     <h2>Retrieve Account Balance</h2>
-    <!-- API and HTML interface to retrieve your account balance from the Vonage API -->
     <form data-event="getBalance" action="/api/balance">
       <button type="submit">Get Balance</button>
     </form>
@@ -14,7 +13,7 @@
       <h4>Create</h4>
       <div>
         <label for="name">Name</label>
-        <input required>
+        <input id="name" name="name" required>
       </div>
   
       <button type="submit">Submit</button>
@@ -29,14 +28,13 @@
 
   <section>
     <h2>Send Text</h2>
-    <!-- API and HTML Interface for sending an SMS using the Vonage Messages API (not the legacy SMS API) The user should be able to submit a To, From, and Message option, and support sending emojis -->
-    <form action="/api/message" method="POST">
+    <form data-event="sendMessage" action="/api/message" method="POST">
       <div>
         <label for="to">To:</label>
         <input id="to" name="to" type="tel" required>
       </div>
       <div>
-        <label for="from">From:</label>
+        <label for="from">From (vonage number):</label>
         <input id="from" name="from" type="tel" required>
       </div>
       <div>
